Lecture 04 - corrected typos found by Beata Šišláková
Closes #52

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/lekce04-memory.tex
+++ b/04-memory/lekce04-memory.tex
@@ -130,7 +130,7 @@ Paměť :
 \end{frame}
 
 \begin{frame}
-\frametitle{Polovodičových paměti -- terminologie}
+\frametitle{Polovodičové paměti -- terminologie}
 
 \begin{description}
  \item[Adresa] vstup, který vybírá svojí hodnotou jednu konkrétní buňku paměti
@@ -393,7 +393,7 @@ Princip se využívá jak v algoritmech (lokální proměnné), kompilátorech (
 \begin{itemize}
 \item V cestě je cache, která může blok, do kterého je zapisováno, obsahovat.
 \item Minimálně z pohledu daného procesoru je nutné zajistit koherenci dat pro daný procesor (často i pro více procesorů -- vlákna) pro přístupy ke každé jednotlivé adrese i pokud existuje více cest přístupu 
-\item \textbf{Write through} (zápis, propsání zkrz) cache -- pokud se již data v cache nahází jsou modifikovaná, ve variantě s automatickou alokací jsou i při výpadku nahraná a pak modifikovaná. Data jsou zároveň odeslaná do hlavní paměti, buď přímo nebo přes zápisovou frontu (write buffer)
+\item \textbf{Write through} (zápis, propsání zkrz) cache -- pokud se již data v cache nachází, jsou modifikovaná (ve variantě s automatickou alokací jsou i při výpadku nahraná a pak modifikovaná). Data jsou zároveň odeslaná do hlavní paměti, buď přímo nebo přes zápisovou frontu (write buffer)
 \item \textbf{Write back} -- data jsou zapsaná do příslušného bloku cache, pokud není v cache, je blok nejdříve načtený. Blok je označený \textbf{dirty bit}em. Zápis do další úrovně až pokud je potřeba danou položku cache uvolnit pro jiná data (replacement) nebo je vyžádaná sychronizace procesorem, systémem (cache flush).
 \end{itemize}
 
@@ -563,9 +563,9 @@ Překlad po jednotlivých bytech by byl drahý, prostor je rozdělěný na~strá
 \begin{frame}
 \frametitle{Překlad virtuální a fyzické adresy}
 
-Překlad překlad zajišťuje \textbf{Memory Management Unit} (MMU).
+Překlad zajišťuje \textbf{Memory Management Unit} (MMU).
 
-Pro po vyplnění stránkovacích tabulek a nastavení \textbf{Page Directory Base Register}
+Po vyplnění stránkovacích tabulek a nastavení \textbf{Page Directory Base Register}
 (PDBR) operačním systémem probíhá překlad na stránky přítomné v paměti většinou automaticky.
 
 Naopak výpadky stránek ošetřují rutiny operačního systému. Pokud je přístup do namapované
@@ -661,7 +661,7 @@ ohrožené fragmentací.
 
 Bit \textbf{Accessed} je klíčový, když operační systém hledá stránky fyzické paměti k uvolnění.
 Obvykle počítá podle bitů další, obsáhlejší, statistiku a při průchodu seznamem bity nuluje.
-Pokud je nastavený \textbf{Dirty}, tak je při uvolnění fyzciké stránky (PFN) je nutné data
+Pokud je nastavený \textbf{Dirty}, tak je při uvolnění fyzciké stránky (PFN) nutné data
 sychronizovat zpět do~souboru, odkládacího oddílu atd.
 
 \end{frame}
