Lecture 01 - corrected quiz choice, reported by Martin Benjamín Mičko
Closes #54

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/01-intro/lekce01-intro.tex
+++ b/01-intro/lekce01-intro.tex
@@ -550,7 +550,7 @@ Kvíz: Jeden vodič reprezentuje jednu hodnotu, buď 0 nebo 1. Jak reprezentovat
 \item[A] Jeden vodič má 8 rozdílných úrovní napětí
 \item[B] Jeden vodič reprezentuje postupně v čase 8 různých hodnot 0/1
 \item[C] Osm vodičů, každý reprezentuje v jeden čas jednu z hodnot 0/1
-\item[D] 256 vodičů, pouze jeden má hodnotu 1 ostatní 
+\item[D] 256 vodičů, pouze jeden má hodnotu 1, ostatní mají hodnotu 0
 \end{itemize}
 
 
