Lecture 03 - corrected typo found by Beata Šišláková
Closes #51

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/lekce03-cpu.tex
+++ b/03-cpu/lekce03-cpu.tex
@@ -797,7 +797,7 @@ Kódování & \texttt{iiii iiii iiii ssss s000 dddd d001 0011} \\
 
 \bigskip
 
-Příklad: Zvětši hodnotu registru 7 a 4 (výsledek tedy ulož do registru 7):\\
+Příklad: Zvětši hodnotu registru 7 o 4 (výsledek tedy ulož do registru 7):\\
 \textbf{\texttt{addi x7, x7, 4}}
 
 \textbf{\texttt{\color{red}iiii iiii iiii}}\phantom{xx}\textbf{\texttt{\color{blue}ssss s}}\hspace{0.1cm}\textbf{\texttt{000\hspace{0.25cm}{\color{green}dddd d}\hspace{0.05cm}001 0011}}\\
