Lecture 03 correction of table and added vonNeumann svg

--- a/03-cpu/lekce03-cpu.tex
+++ b/03-cpu/lekce03-cpu.tex
@@ -903,13 +903,13 @@ Podle Opcode lze nadefinovat výstupy řadiče:
 \begin{tabular}{|lccc|cccccc|}\hline
 Instrukce & Opcode & Fnct3 & Fnct7 & \rotatebox{90}{ALUControl\phantom{x}} & \rotatebox{90}{ALUSrc} & \rotatebox{90}{RegWrite} & \rotatebox{90}{MemWrite} & \rotatebox{90}{MemToReg} & \rotatebox{90}{Branch} \\ \hline
 lw & 0000011 & 010 & --       &           + & 1 & 1 & 0 & 1 & 0\\
-sw & 0100011 & 010 & --       &           + & 1 & 1 & 1 & 0 & 0\\
+sw & 0100011 & 010 & --       &           + & 1 & 0 & 1 & 0 & 0\\
 add & 0110011 & 000 & 0000000 &           + & 0 & 1 & 0 & 0 & 0\\
 sub & 0110011 & 000 & 0100000 &           - & 0 & 1 & 0 & 0 & 0\\
-slt & 0110011 & 010 & 0000000 & \texttt{<<} & 0 & 1 & 0 & 0 & 0\\
+slt & 0110011 & 010 & 0000000 &  \texttt{<} & 0 & 1 & 0 & 0 & 0\\
 or & 0110011 & 110 & 0000000  & \texttt{|}  & 0 & 1 & 0 & 0 & 0\\
 and & 0110011 & 111 & 0000000 & \texttt{\&} & 0 & 1 & 0 & 0 & 0\\
-addi & 0010011 & 000 & --     &           + & 0 & 1 & 0 & 0 & 0\\
+addi & 0010011 & 000 & --     &           + & 1 & 1 & 0 & 0 & 0\\
 beq & 1100011 & 000 & --      & \texttt{==} & 0 & 0 & 0 & * & 1\\ \hline
 \end{tabular}
 \end{frame}
