Lecture 03 von Neumann image from wiki

--- a/03-cpu/lekce03-cpu.tex
+++ b/03-cpu/lekce03-cpu.tex
@@ -51,7 +51,7 @@
 \frametitle{John von Neumann}
 \begin{center}
 \includegraphics[width=0.5\textwidth]{cpu-vonNeumann.pdf}
-\hfill
+\phantom{XXXXXXX}
 \includegraphics[width=0.15\textwidth]{fig/vonNeumann.png}
 \end{center}
 \begin{itemize}
