Rename graphics files including text in the Czech language
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/01-intro/lekce01-intro.tex
+++ b/01-intro/lekce01-intro.tex
@@ -239,7 +239,7 @@ Společný koncept navržený maďarským fyzikem Johnem von Neumannem (1903-195
 \end{column}
 \begin{column}{0.5\textwidth}  
 \begin{center}
-   \includegraphics[width=0.95\textwidth]{cpu.pdf}
+   \includegraphics[width=0.95\textwidth]{cpu-cz.pdf}
 \end{center}
 \end{column}
 \end{columns}
@@ -419,7 +419,7 @@ Napětí jednoho vodiče vůči zemi definuje logickou hodnotu.
 \end{column}
 \begin{column}{0.55\textwidth}  
 \begin{center}
-   \includegraphics[width=0.9\textwidth]{ttl_log01.pdf}
+   \includegraphics[width=0.9\textwidth]{ttl_log01-cz.pdf}
 \end{center}
 \end{column}
 \end{columns}
