--- a/06-predictors/lekce06-predictors.tex
+++ b/06-predictors/lekce06-predictors.tex
@@ -443,7 +443,7 @@ for (i=0; i<N; i++) {
 \end{minted}
 \end{column}
 \begin{column}{0.6\textwidth}
-\includegraphics[width=\textwidth]{for_cyklus.pdf}
+\includegraphics[width=\textwidth]{for_cyklus-cz.pdf}
 \end{column}
 \end{columns}
 \bigskip
@@ -472,7 +472,7 @@ if (a<b) {
 \end{minted}
 \end{column}
 \begin{column}{0.6\textwidth}
-\includegraphics[width=\textwidth]{if_preklad.pdf}
+\includegraphics[width=\textwidth]{if_preklad-cz.pdf}
 \end{column}
 \end{columns}
 \bigskip
@@ -506,7 +506,7 @@ Dynamické prediktory se snaží odhadnout, zda se skočí na základě minuléh
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=\textwidth]{prediction_table.pdf}
+\includegraphics[width=\textwidth]{prediction_table-cz.pdf}
 \end{column}
 \end{columns}
 
@@ -526,7 +526,7 @@ Nejjednodušší prediktor je 1-bitový Smithův prediktor
 \end{itemize}
 
 \begin{center}
-\includegraphics[width=0.45\textwidth]{smith_1bit.pdf}
+\includegraphics[width=0.45\textwidth]{smith_1bit-cz.pdf}
 \end{center}
 
 \end{frame}
@@ -583,7 +583,7 @@ Vidíte, že prediktor není úspěšný na počátku for cyklu a na jeho konci.
 \end{itemize}
 
 \begin{center}
-\includegraphics[width=0.95\textwidth]{smith_2bit.pdf}
+\includegraphics[width=0.95\textwidth]{smith_2bit-cz.pdf}
 \end{center}
 \end{frame}
 
@@ -638,7 +638,7 @@ Obdoba 2-bitového Smithova prediktoru
 \end{itemize}
 
 \begin{center}
-\includegraphics[width=0.95\textwidth]{smith_2bit_hist.pdf}
+\includegraphics[width=0.95\textwidth]{smith_2bit_hist-cz.pdf}
 \end{center}
 \end{frame}
 
@@ -710,7 +710,7 @@ Pro zjištení indexu prediktoru se vezme $k-m$ nejnižších bitů adresy instr
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=\textwidth]{prediction_BHR.pdf}
+\includegraphics[width=\textwidth]{prediction_BHR-cz.pdf}
 \end{column}
 \end{columns}
 
@@ -736,7 +736,7 @@ Výhody:
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=\textwidth]{prediction_GShare.pdf}
+\includegraphics[width=\textwidth]{prediction_GShare-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -792,7 +792,7 @@ T & T & T & NT & NT & NT& T & T & T \\ \hline
 \frametitle{Perceptron}
 
 \begin{center}
-\includegraphics[width=0.6\textwidth]{neuron.pdf}
+\includegraphics[width=0.6\textwidth]{neuron-cz.pdf}
 \end{center}
 
 Pro výpočet hodnoty se použije vzoreček $\xi = \sum_{i=0}^{n} x_i \cdot w_i$. Závěrečné vyhodnocení je pomocí přenosové funkce, v našem případě skokové funkce, která má tvar:
@@ -804,7 +804,7 @@ $f(\xi) = \begin{cases}1& \text{pro } \xi \ge 0\\0& \text{pro }\xi <0\end{cases}
 \frametitle{AMD Zen2 prediktor}
 
 \begin{center}
-\includegraphics[width=0.7\textwidth]{prediction_amd.pdf}
+\includegraphics[width=0.7\textwidth]{prediction_amd-cz.pdf}
 \end{center}
 
 Podle adresy skoku se vybere jeden perceptron z tabulky. 
