--- a/07-io/lekce07-io.tex
+++ b/07-io/lekce07-io.tex
@@ -126,7 +126,7 @@ Příklady senzorů a aktuátorů:
 \frametitle{Propojení CPU s pamětí a perifériemi}
 \begin{columns}
 \begin{column}{0.4\textwidth}
-\includegraphics[width=0.9\textwidth]{bus_arch.pdf}
+\includegraphics[width=0.9\textwidth]{bus_arch-cz.pdf}
 \end{column}
 \begin{column}{0.6\textwidth}  
 \begin{itemize}
@@ -177,7 +177,7 @@ Prakticky existují dva různé přístupy:
 \item Address Decoder -- rozhoduje, kam se data přesměrují
 \end{itemize}
 \begin{center}
-\includegraphics[width=0.88\textwidth]{address_decoder.pdf}
+\includegraphics[width=0.88\textwidth]{address_decoder-cz.pdf}
 \end{center}
 \end{frame}
 
@@ -188,13 +188,13 @@ Prakticky existují dva různé přístupy:
 Centralizovaný dekodér
 
 \begin{center}
-\includegraphics[width=0.8\textwidth]{central.pdf}
+\includegraphics[width=0.8\textwidth]{central-cz.pdf}
 \end{center}
 
 Decentralizovaný -- autonomní dekodér
 
 \begin{center}
-\includegraphics[width=0.8\textwidth]{distributed.pdf}
+\includegraphics[width=0.8\textwidth]{distributed-cz.pdf}
 \end{center}
 \end{frame}
 
@@ -492,7 +492,7 @@ UART -- speciální zařízení, které přijímá a vysílá bajty po sériové
 \end{itemize}
 \end{column}
 \begin{column}{0.45\textwidth}
-\includegraphics[width=\textwidth]{UART.pdf}
+\includegraphics[width=\textwidth]{UART-cz.pdf}
 \end{column}
 \end{columns}
 
@@ -750,7 +750,7 @@ CTRL jsou bity řídicí průběh přenosu
 \item Pokud je iniciátor připraven vyslat data, nastaví IRDY na 1
 \end{itemize}
 
-\includegraphics[width=0.8\textwidth]{PCI_write2.pdf}
+\includegraphics[width=0.8\textwidth]{PCI_write2-cz.pdf}
 
 \end{frame}
 
@@ -764,7 +764,7 @@ CTRL jsou bity řídicí průběh přenosu
 \item Pokud je TRDY nebo IRDY na 0, pak je přenos dat pozastaven-
 \end{itemize}
 
-\includegraphics[width=0.8\textwidth]{PCI_write3.pdf}
+\includegraphics[width=0.8\textwidth]{PCI_write3-cz.pdf}
 
 \end{frame}
 
@@ -778,7 +778,7 @@ CTRL jsou bity řídicí průběh přenosu
 \item Po ukončení přenosu se signály IRDY, TRDY a DEVSEL vrátí na 0 a sběrnice se uvolní pro další přenos.
 \end{itemize}
 
-\includegraphics[width=0.8\textwidth]{PCI_write4.pdf}
+\includegraphics[width=0.8\textwidth]{PCI_write4-cz.pdf}
 
 \end{frame}
 
