--- a/08-mz_apo/lekce08-mz_apo.tex
+++ b/08-mz_apo/lekce08-mz_apo.tex
@@ -30,21 +30,21 @@
 \begin{frame}
 \frametitle{Výukový kit MZ\_APO -- smontovaný}
 
-\includegraphics[width=0.98\textwidth]{mz_apo-kit-with-cover-labels.pdf}
+\includegraphics[width=0.98\textwidth]{mz_apo-kit-with-cover-labels-cz.pdf}
 
 \end{frame}
 
 \begin{frame}
 \frametitle{Výukový kit MZ\_APO -- základová deska}
 
-\includegraphics[width=1.0\textwidth]{mz_apo-baseboard-top-labels.pdf}
+\includegraphics[width=1.0\textwidth]{mz_apo-baseboard-top-labels-cz.pdf}
 
 \end{frame}
 
 \begin{frame}
 \frametitle{Modul MicroZed -- pohled shora}
 
-\includegraphics[width=1.0\textwidth]{microzed-board-top-labels.pdf}
+\includegraphics[width=1.0\textwidth]{microzed-board-top-labels-cz.pdf}
 
 \end{frame}
 
@@ -57,7 +57,7 @@ SoM -- počítač na modulu (System on Module)
 \par
 Čip Xilinx/AMD XC7Z010, cena okolo 90\,USD (2023)
 \par
-\includegraphics[width=0.90\textwidth]{microzed-board-bottom-labels.pdf}
+\includegraphics[width=0.90\textwidth]{microzed-board-bottom-labels-cz.pdf}
 \par
 108-pinové konektory umožňují využít a propojit modul s vlastním návrhem. I přes tyto piny je možné modul napájet,
 přítup k PS periferiím i pinům programovatelné logiky PL (FPGA).
@@ -264,7 +264,7 @@ Seznam implementací \url{https://en.wikipedia.org/wiki/ARM\_Cortex-A9\#Implemen
 \item Address Decoder -- rozhoduje, kam se data přesměrují
 \end{itemize}
 \begin{center}
-\includegraphics[width=0.88\textwidth]{address_decoder.pdf}
+\includegraphics[width=0.88\textwidth]{address_decoder-cz.pdf}
 \end{center}
 \end{frame}
 
