--- a/11-architekturax86/lekce04-cpu.tex
+++ b/11-architekturax86/lekce04-cpu.tex
@@ -103,7 +103,7 @@ The control unit is responsible for control of the operation processing and sequ
 \frametitle{Registr FLAGS}
 RFLAGS registr
 \begin{center}
-\includegraphics[width=0.65\textwidth]{flags.pdf}
+\includegraphics[width=0.65\textwidth]{flags-cz.pdf}
 \end{center}
 \begin{columns}[t,onlytextwidth]
 \begin{column}{0.5\textwidth}
