--- a/11-architekturax86/lekce11-x86.tex
+++ b/11-architekturax86/lekce11-x86.tex
@@ -27,7 +27,7 @@ Základní vlastnosti:
 \end{column}
 \begin{column}{0.52\textwidth}  
    \begin{center}
-   \includegraphics[width=0.9\textwidth]{cpu.pdf}
+   \includegraphics[width=0.9\textwidth]{cpu-cz.pdf}
    \end{center}
 \end{column}
 \end{columns}
@@ -90,7 +90,7 @@ Uživatelské registry
 \frametitle{Registr FLAGS}
 RFLAGS registr
 \begin{center}
-\includegraphics[width=0.65\textwidth]{flags.pdf}
+\includegraphics[width=0.65\textwidth]{flags-cz.pdf}
 \end{center}
 \begin{columns}[t,onlytextwidth]
 \begin{column}{0.5\textwidth}
@@ -561,7 +561,7 @@ ret
 \end{column}
 
 \begin{column}{0.3\textwidth}  
-\includegraphics[width=0.95\textwidth]{fce_frame.pdf}
+\includegraphics[width=0.95\textwidth]{fce_frame-cz.pdf}
 \end{column}
 
 \end{columns}
