--- a/02-numbers/lekce02-numbers.tex
+++ b/02-numbers/lekce02-numbers.tex
@@ -177,7 +177,7 @@ Stejný princip násobení, jak jste se ho naučili na základní škole pro des
 Podle uvedeného algoritmu můžeme vytvořit následující násobičku s posuvným registrem:\\
 (A,B 32 bitů, výsledek 64 bitů)
 \begin{center}
-\includegraphics[width=0.45\textwidth]{multiplier-seq.pdf}
+\includegraphics[width=0.45\textwidth]{multiplier-seq-cz.pdf}
 \end{center}
 \begin{itemize}
 \item Výsledek je ve dvou registrech AC a B 
@@ -299,7 +299,7 @@ Dělička počítající \texttt{A/B}, A má 64 bitů, B 32 bitů:\\
 \begin{columns}
 \begin{column}{0.4\textwidth}
 číslo A je uloženo ve dvou registrech AC,A\\
-\includegraphics[width=1\textwidth]{divider-seq.pdf}
+\includegraphics[width=1\textwidth]{divider-seq-cz.pdf}
 \end{column}
 \hfill
 \begin{column}{0.6\textwidth}
@@ -418,7 +418,7 @@ Odčítání lze řešit:
 \hfill
 \begin{column}{0.5\textwidth}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{odcitani.pdf}
+\includegraphics[width=0.5\textwidth]{odcitani-cz.pdf}
 \end{center}
 \end{column}
 \end{columns}
@@ -798,7 +798,7 @@ Exponent $e=-1$, reprezentace s posunutou nulou o 127 je $A(-1)=-1+127 = 126$.\\
 Abychom neplýtvali zbytečně bity, pro normalizovaná čísla se první 1 mantisy neukládá do binární reprezentace čísla:
 
 \begin{center}
-\includegraphics[width=0.4\textwidth]{float_priklad.pdf}
+\includegraphics[width=0.4\textwidth]{float_priklad-cz.pdf}
 \end{center}
 
 Zkuste si \url{https://www.h-schmidt.net/FloatConverter/IEEE754.html}
