--- a/10-call/lekce10-call.tex
+++ b/10-call/lekce10-call.tex
@@ -323,7 +323,7 @@ Implemetace zásobníku registrem sp (x2):
 \end{column}
 \hfill
 \begin{column}{0.3\textwidth}  
-\includegraphics[width=0.9\textwidth]{zasobnik.pdf}
+\includegraphics[width=0.9\textwidth]{stack-push-pop.pdf}
 \end{column}
 \end{columns}
 
@@ -485,7 +485,7 @@ Ukončení funkce:
 \end{itemize}
 \end{column}
 \begin{column}{0.35\textwidth}  
-\includegraphics[width=0.9\textwidth]{jednoducha_fce.pdf}
+\includegraphics[width=0.9\textwidth]{jednoducha_fce-cz.pdf}
 \end{column}
 \end{columns}
 
@@ -541,7 +541,7 @@ ret
 
 \end{column}
 \begin{column}{0.35\textwidth}  
-\includegraphics[width=0.7\textwidth]{slozita_fce.pdf}
+\includegraphics[width=0.7\textwidth]{slozita_fce-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -619,7 +619,7 @@ ret
 \end{minted}
 \end{column}
 \begin{column}{0.35\textwidth}  
-\includegraphics[width=0.7\textwidth]{slozita_fce_fp.pdf}
+\includegraphics[width=0.7\textwidth]{slozita_fce_fp-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -679,7 +679,7 @@ Každý proces má pro sebe 4GiB virtuálního prostoru:
 \end{itemize}
 \end{column}   
 \begin{column}{0.25\textwidth}  
-\includegraphics[width=0.8\textwidth]{rozlozeni_procesu.pdf}
+\includegraphics[width=0.8\textwidth]{rozlozeni_procesu-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -801,7 +801,7 @@ ret
 \end{minted}
 \end{column}
 \begin{column}{0.33\textwidth}  
-\includegraphics[width=\textwidth]{overflow_fce.pdf}
+\includegraphics[width=\textwidth]{overflow_fce-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -898,7 +898,7 @@ ret
 \end{minted}
 \end{column}
 \begin{column}{0.3\textwidth}  
-\includegraphics[width=0.7\textwidth]{vaarg_fce_fp.pdf}
+\includegraphics[width=0.7\textwidth]{vaarg_fce_fp-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -933,7 +933,7 @@ Uživatelský program nastaví parametry volání do registrů vyvolá speciáln
 OS podle čísla systémového volání zavolá odpovídající funkci.
 
 \begin{center}
-  \includegraphics[width=0.95\textwidth]{irq-and-os.pdf}
+  \includegraphics[width=0.95\textwidth]{irq-and-os-cz.pdf}
 \end{center}
 
 Návrat ze systémového volání odpovídá návratu z přerušení.
