Graphics files renamed to have meaningful names in English language
Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/lekce03-cpu.tex
+++ b/03-cpu/lekce03-cpu.tex
@@ -520,7 +520,7 @@ Při náběžné hraně hodin (signál CLK) se do registru PC uloží nová hodn
 \begin{tabular}{m{1.6cm} m{9.5cm}}
 \hfill \includegraphics[width=0.6cm]{registr.pdf} & jeden registr, zápis řízen hodinovým signálem CLK \\ 
 \phantom{X} & \phantom{X} \\
-\hfill \includegraphics[width=1.6cm]{registry-cz.pdf} & soubor 32 registrů, podle vstupu A1, A2 vybere hodnoty těchto dvou registrů na výstup RD1 a RD2; pokud přijde hodinový signál a je nastaven vstup WE3 (write enable) tak se hodnota WD3 zapíše do registru číslo A3 \\
+\hfill \includegraphics[width=1.6cm]{registers-cz.pdf} & soubor 32 registrů, podle vstupu A1, A2 vybere hodnoty těchto dvou registrů na výstup RD1 a RD2; pokud přijde hodinový signál a je nastaven vstup WE3 (write enable) tak se hodnota WD3 zapíše do registru číslo A3 \\
 \phantom{X} & \phantom{X} \\
 \hfill \includegraphics[width=0.8cm]{multiplexor.pdf} & na základě hodnoty řídicího signálu Select přenáší hodnotu jednoho ze vstupů na výstup \\ 
 \phantom{X} & \phantom{X} \\
