--- a/06-predictors/lekce06-predictors.tex
+++ b/06-predictors/lekce06-predictors.tex
@@ -443,7 +443,7 @@ for (i=0; i<N; i++) {
 \end{minted}
 \end{column}
 \begin{column}{0.6\textwidth}
-\includegraphics[width=\textwidth]{for_cyklus-cz.pdf}
+\includegraphics[width=\textwidth]{for_loop-cz.pdf}
 \end{column}
 \end{columns}
 \bigskip
@@ -472,7 +472,7 @@ if (a<b) {
 \end{minted}
 \end{column}
 \begin{column}{0.6\textwidth}
-\includegraphics[width=\textwidth]{if_preklad-cz.pdf}
+\includegraphics[width=\textwidth]{if_translation-cz.pdf}
 \end{column}
 \end{columns}
 \bigskip
