--- a/07-io/lekce07-io.tex
+++ b/07-io/lekce07-io.tex
@@ -634,7 +634,7 @@ Zřetězený procesor -- pipelined verze
 \frametitle{Topologie sběrnic}
 \begin{center}
 Sdílená sběrnice (např. PCI)
-\includegraphics[width=0.8\textwidth]{sdileny_bus.pdf}
+\includegraphics[width=0.8\textwidth]{shared_bus.pdf}
 \end{center}
 
 \begin{center}
