--- a/10-call/lekce10-call.tex
+++ b/10-call/lekce10-call.tex
@@ -485,7 +485,7 @@ Ukončení funkce:
 \end{itemize}
 \end{column}
 \begin{column}{0.35\textwidth}  
-\includegraphics[width=0.9\textwidth]{jednoducha_fce-cz.pdf}
+\includegraphics[width=0.9\textwidth]{simple_fnc-cz.pdf}
 \end{column}
 \end{columns}
 
@@ -541,7 +541,7 @@ ret
 
 \end{column}
 \begin{column}{0.35\textwidth}  
-\includegraphics[width=0.7\textwidth]{slozita_fce-cz.pdf}
+\includegraphics[width=0.7\textwidth]{complex_fnc-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -619,7 +619,7 @@ ret
 \end{minted}
 \end{column}
 \begin{column}{0.35\textwidth}  
-\includegraphics[width=0.7\textwidth]{slozita_fce_fp-cz.pdf}
+\includegraphics[width=0.7\textwidth]{complex_fnc_fp-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -679,7 +679,7 @@ Každý proces má pro sebe 4GiB virtuálního prostoru:
 \end{itemize}
 \end{column}   
 \begin{column}{0.25\textwidth}  
-\includegraphics[width=0.8\textwidth]{rozlozeni_procesu-cz.pdf}
+\includegraphics[width=0.8\textwidth]{proc_addr_space-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -801,7 +801,7 @@ ret
 \end{minted}
 \end{column}
 \begin{column}{0.33\textwidth}  
-\includegraphics[width=\textwidth]{overflow_fce-cz.pdf}
+\includegraphics[width=\textwidth]{overflow_fnc-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
@@ -898,7 +898,7 @@ ret
 \end{minted}
 \end{column}
 \begin{column}{0.3\textwidth}  
-\includegraphics[width=0.7\textwidth]{vaarg_fce_fp-cz.pdf}
+\includegraphics[width=0.7\textwidth]{vaarg_fnc_fp-cz.pdf}
 \end{column}
 \end{columns}
 \end{frame}
