--- a/11-architekturax86/lekce11-x86.tex
+++ b/11-architekturax86/lekce11-x86.tex
@@ -561,7 +561,7 @@ ret
 \end{column}
 
 \begin{column}{0.3\textwidth}  
-\includegraphics[width=0.95\textwidth]{fce_frame-cz.pdf}
+\includegraphics[width=0.95\textwidth]{fnc_frame-cz.pdf}
 \end{column}
 
 \end{columns}
