--- a/02-numbers/lekce02-numbers.tex
+++ b/02-numbers/lekce02-numbers.tex
@@ -418,7 +418,7 @@ Odčítání lze řešit:
 \hfill
 \begin{column}{0.5\textwidth}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{odcitani-cz.pdf}
+\includegraphics[width=0.5\textwidth]{substaction-cz.pdf}
 \end{center}
 \end{column}
 \end{columns}
@@ -798,7 +798,7 @@ Exponent $e=-1$, reprezentace s posunutou nulou o 127 je $A(-1)=-1+127 = 126$.\\
 Abychom neplýtvali zbytečně bity, pro normalizovaná čísla se první 1 mantisy neukládá do binární reprezentace čísla:
 
 \begin{center}
-\includegraphics[width=0.4\textwidth]{float_priklad-cz.pdf}
+\includegraphics[width=0.4\textwidth]{float_example-cz.pdf}
 \end{center}
 
 Zkuste si \url{https://www.h-schmidt.net/FloatConverter/IEEE754.html}
