--- a/01-intro/apo-lecture01-intro-cz.tex
+++ b/01-intro/apo-lecture01-intro-cz.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 %[aspectratio=169]   \usepackage[czech]{babel}
-\usepackage{apo-lecture}
+\usepackage{apo-lecture-cz}
 \usepackage{pdfpages}
 \usepackage{pdfcomment}
 \usepackage{listings}
