--- a/05-pipeline/apo-lecture05-pipeline-cz.tex
+++ b/05-pipeline/apo-lecture05-pipeline-cz.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 %[aspectratio=169]   \usepackage[czech]{babel}
-\usepackage{apo-lecture}
+\usepackage{apo-lecture-cz}
 \usepackage{pdfpages}
 \usepackage{pdfcomment}
 \usepackage{listings}
