--- a/08-mz_apo/apo-lecture08-mz_apo-cz.tex
+++ b/08-mz_apo/apo-lecture08-mz_apo-cz.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 %[aspectratio=169]   \usepackage[czech]{babel}
-\usepackage{apo-lecture}
+\usepackage{apo-lecture-cz}
 \usepackage{pdfpages}
 \usepackage{pdfcomment}
 \usepackage{listings}
