--- a/11-architekturax86/lekce04-cpu.tex
+++ b/11-architekturax86/lekce04-cpu.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 %[aspectratio=169]   \usepackage[czech]{babel}
-\usepackage{apo-lecture}
+\usepackage{apo-lecture-cz}
 \usepackage{pdfpages}
 \usepackage{pdfcomment}
 \usepackage{listings}
