--- a/13-vmlev-virt/apo-lecture13-vmlev-virt-cz.tex
+++ b/13-vmlev-virt/apo-lecture13-vmlev-virt-cz.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer}
 %[aspectratio=169]   \usepackage[czech]{babel}
-\usepackage{apo-lecture}
+\usepackage{apo-lecture-cz}
 \usepackage{pdfpages}
 \usepackage{pdfcomment}
 \usepackage{listings}
