Lecture 2 corrected how to get -x

--- a/02-numbers/apo-lecture02-numbers-cz.tex
+++ b/02-numbers/apo-lecture02-numbers-cz.tex
@@ -388,7 +388,7 @@ Potřebujeme zakódovat znaménko do reprezentace čísla:
 \item potřebujeme vymyslet jak získat z \texttt{B} hodnotu \texttt{-B}
 \begin{itemize}
 \item víme, že záporné $X = 2^k-|X|$
-\item pokud znegujeme každý bit, tak je to vlastně $(2^{k-1}-1)-X$, protože $2^{k-1}-1$ je číslo složené z $k$ jedniček
+\item pokud znegujeme každý bit, tak je to vlastně $(2^{k}-1)-X$, protože $2^{k}-1$ je číslo složené z $k$ jedniček
 \end{itemize}
 \item Výsledný postup je tedy:
 \begin{enumerate}
